--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
 
   <!-- 左侧图标栏 -->
   <div id="sidebar">
-    <div class="icon">📅</div>
-    <div class="icon">🛰️</div>
-    <div class="icon">💬</div>
-    <div class="icon">⚙️</div>
+    <div class="icon-group">
+      <div class="icon">☰</div>
+      <div class="icon">🇬🇧</div>
+      <div class="icon">🔔</div>
+      <div class="icon">ℹ️</div>
+    </div>
+  
+    <div class="separator"></div>
+  
+    <div class="icon-group">
+      <div class="icon">🎛️</div>
+      <div class="icon">⌨️</div>
+      <div class="icon">✏️</div>
+    </div>
+  
+    <div class="separator"></div>
+  
+    <div class="icon-group">
+      <div class="icon">☁️</div>
+      <div class="icon">💨</div>
+      <div class="icon">📡</div>
+      <div class="icon">🔥</div>
+      <div class="icon">☢️</div>
+    </div>
   </div>
 
   <!-- 顶部浮动控制框（仿 DeepStateMAP 日期栏） -->
