--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="sidebar">
     <div class="icon-group">
       <div class="icon">☰</div>
-      <div class="icon">🇬🇧</div>
+      <div class="icon">🌐</div>
       <div class="icon">🔔</div>
       <div class="icon">ℹ️</div>
     </div>
