--- a/index.html
+++ b/index.html
@@ -11,44 +11,41 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  
   <!-- 左侧图标栏 -->
   <div id="sidebar">
-    <div class="icon-group">
-      <div class="icon">☰</div>
-      <div class="icon">🌐</div>
-      <div class="icon">🔔</div>
-      <div class="icon">ℹ️</div>
+    <div class="sidebar-section top">
+      <div class="icon-group">
+        <div class="icon">☰</div>
+        <div class="icon">🌐</div>
+        <div class="icon">🔔</div>
+        </div>
+      </div>
+    
+      <div class="sidebar-section middle">
+        <div class="icon-group">
+          <div class="icon">🛠️</div>
+          <div class="icon">✏️</div>
+        </div>
+      </div>
+    
+      <div class="sidebar-section bottom">
+        <div class="icon-group">
+          <div class="icon">☁️</div>
+          <div class="icon">📡</div>
+        </div>
+      </div>
     </div>
   
-    <div class="separator"></div>
-  
-    <div class="icon-group">
-      <div class="icon">🎛️</div>
-      <div class="icon">⌨️</div>
-      <div class="icon">✏️</div>
+    <!-- 顶部浮动控制框（仿 DeepStateMAP 日期栏） -->
+    <div class="control-panel">
+      <button id="play-speed">1x</button>
+      <button id="prev-day">←</button>
+      <div id="current-date">06.06.2025</div>
+      <button id="next-day">→</button>
+      <button id="open-calendar">📅</button>
+      <button id="jump-latest">⇱</button>
     </div>
-  
-    <div class="separator"></div>
-  
-    <div class="icon-group">
-      <div class="icon">☁️</div>
-      <div class="icon">💨</div>
-      <div class="icon">📡</div>
-      <div class="icon">🔥</div>
-      <div class="icon">☢️</div>
-    </div>
-  </div>
-
-  <!-- 顶部浮动控制框（仿 DeepStateMAP 日期栏） -->
-  <div class="control-panel">
-    <button id="play-speed">1x</button>
-    <button id="prev-day">←</button>
-    <div id="current-date">06.06.2025</div>
-    <button id="next-day">→</button>
-    <button id="open-calendar">📅</button>
-    <button id="jump-latest">⇱</button>
-  </div>
 
   <!-- 日历弹窗 -->
   <div id="calendar-popup" class="hidden">
