--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <div class="icon">☰</div>
         <div class="icon">🌐</div>
         <div class="icon">🔔</div>
+        <div class="icon">ℹ️</div>
         </div>
       </div>
     
       <div class="sidebar-section middle">
         <div class="icon-group">
           <div class="icon">🛠️</div>
+          <div class="icon">📏</div>
           <div class="icon">✏️</div>
         </div>
       </div>
@@ -32,7 +34,10 @@
       <div class="sidebar-section bottom">
         <div class="icon-group">
           <div class="icon">☁️</div>
+          <div class="icon">🎯</div>
           <div class="icon">📡</div>
+          <div class="icon">🔥</div>
+          <div class="icon">💥</div>
         </div>
       </div>
     </div>
