--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div class="icon">ℹ️</div>
         </div>
       </div>
+
+    <div class="separator"></div>
     
       <div class="sidebar-section middle">
         <div class="icon-group">
@@ -30,6 +32,8 @@
           <div class="icon">✏️</div>
         </div>
       </div>
+
+    <div class="separator"></div>
     
       <div class="sidebar-section bottom">
         <div class="icon-group">
