--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div id="calendar-popup" class="hidden">
     <div class="calendar-header">
       <strong>Calendar</strong>
-      <button id="close-calendar">✕</button>
+      <button id="close-calendar" aria-label="Close">✕</button>
     </div>
     <input type="date" id="date-picker" />
     <button id="today-button">Today</button>
