--- a/index.html
+++ b/index.html
@@ -46,14 +46,23 @@
       </div>
     </div>
   
-    <!-- 顶部浮动控制框（仿 DeepStateMAP 日期栏） -->
-    <div class="control-panel">
-      <button id="play-speed">1x</button>
-      <button id="prev-day">←</button>
-      <div id="current-date">06.06.2025</div>
-      <button id="next-day">→</button>
-      <button id="open-calendar">📅</button>
-      <button id="jump-latest">⇱</button>
+    <div class="top-panel">
+      <div class="logo-bar">
+        <img src="logo.svg" alt="Logo" class="logo" />
+        <span class="brand-name">DEEP<br>STATE</span>
+        <span class="search-icon">🔍</span>
+      </div>
+    
+      <div class="divider"></div>
+    
+      <div class="control-panel">
+        <button id="play-speed">1x</button>
+        <button id="prev-day">←</button>
+        <div id="current-date">06.06.2025</div>
+        <button id="next-day">→</button>
+        <button id="open-calendar">📅</button>
+        <button id="jump-latest">⇱</button>
+      </div>
     </div>
 
   <!-- 日历弹窗 -->
