--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="top-panel">
       <div class="logo-bar">
         <img src="logo.svg" alt="Logo" class="logo" />
-        <span class="brand-name">DEEP<br>STATE</span>
+        <span class="brand-name">CSFS<br>MAPPING</span>
         <span class="search-icon">🔍</span>
       </div>
     
