--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
     <button id="today-button">Today</button>
   </div>
 
+  <!-- 🔔 每日更新面板 -->
+  <div id="update-panel" class="hidden">
+    <div class="update-header">
+      <strong>每日更新</strong>
+      <button id="close-update-panel">✕</button>
+    </div>
+    <div id="update-list" class="update-list">
+      <!-- JavaScript 会填充内容 -->
+    </div>
+  </div>
+
   <!-- 地图容器 -->
   <div id="map"></div>
 
