--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="top-panel">
       <div class="logo-bar">
         <img src="https://github.com/CSFS64/test2/blob/main/images/LOGO.jpg?raw=true" alt="Logo" class="logo" />
-        <span class="brand-name">CSFS<br>MAPPING</span>
+        <span class="brand-name">Kalyna<br>Battle Map</span>
       </div>
     
       <div class="divider"></div>
