--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
     <div class="top-panel">
       <div class="logo-bar">
-        <img src="https://github.com/CSFS64/test2/blob/main/images/LOGO.jpg?raw=true" alt="Logo" class="logo" />
+        <img src="https://github.com/CSFS64/test2/blob/main/images/LOGO.png?raw=true" alt="Logo" class="logo" />
         <span class="brand-name">Kalyna<br>Battle Map</span>
       </div>
     
