--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
   <!-- Leaflet 地图样式 -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  
   <!-- 自定义样式 -->
   <link rel="stylesheet" href="style.css" />
 </head>
+  
 <body>
   
   <!-- 左侧图标栏 -->
@@ -74,14 +76,14 @@
     <button id="today-button">Today</button>
   </div>
 
-  <!-- 🔔 每日更新面板 -->
+  <!-- 每日更新面板 -->
   <div id="update-panel" class="hidden">
     <div class="update-header">
-      <strong>每日更新</strong>
+      <strong>更新概要（点击跳转）</strong>
       <button id="close-update-panel">✕</button>
     </div>
     <div id="update-list" class="update-list">
-      <!-- JavaScript 会填充内容 -->
+
     </div>
   </div>
 
