--- a/index.html
+++ b/index.html
@@ -87,11 +87,22 @@
     </div>
   </div>
 
+  <!-- 信息面板 -->
+  <div id="info-panel" class="hidden">
+    <div class="update-header">
+      <span>Information</span>
+      <button id="close-info-panel">✖</button>
+    </div>
+    <div id="info-content" class="update-list"></div>
+  </div>
+
   <!-- 地图容器 -->
   <div id="map"></div>
 
   <!-- Leaflet 脚本 -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
+
   <!-- 自定义逻辑 -->
   <script src="main.js"></script>
 </body>
