--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- 信息面板 -->
   <div id="info-panel" class="hidden">
     <div class="update-header">
-      <span>Information</span>
+      <span>领土信息</span>
       <button id="close-info-panel">✖</button>
     </div>
     <div id="info-content" class="update-list"></div>
