--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="sidebar-section top">
       <div class="icon-group">
         <div class="icon">☰</div>
-        <div class="icon">🌐</div>
+        <div class="icon">📍</div>
         <div class="icon">🔔</div>
         <div class="icon">ℹ️</div>
         </div>
