--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     <div class="geo-form">
       <input id="geo-input" type="text" inputmode="decimal"
              placeholder="例如：48.25292, 37.22646" />
-      <button id="geo-go" class="geo-go">定位</button>
+      <button id="geo-go" class="geo-go">前往</button>
     </div>
   
-    <div class="geo-hint">格式：纬度, 经度（支持空格）</div>
+    <div class="geo-hint">输入坐标，前往指定区域</div>
   </div>
 
   <!-- 地图容器 -->
