--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
       <button id="close-ruler-panel">✕</button>
     </div>
     <div class="ruler-body">
-      <p class="hint">Keep clicking to add more points. Points are draggable.</p>
+      <p class="hint">左键添加测量点，再次点击第一个点闭合以测量面积，测量点可以拖动</p>
       <div class="ruler-stats">
         <div class="stat">
           <div class="num" id="ruler-distance">0.00</div>
-          <div class="label">Distance, km</div>
+          <div class="label">距离, km</div>
         </div>
         <div class="stat">
           <div class="num" id="ruler-area">—</div>
-          <div class="label">Area, km²</div>
+          <div class="label">面积, km²</div>
         </div>
       </div>
       <div class="ruler-actions">
