--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div id="ruler-panel" class="hidden">
     <div class="update-header">
       <strong>Ruler</strong>
-      <button id="close-ruler-panel">✕</button>
+      <button id="close-ruler-panel" class="close-btn">✕</button>
     </div>
     <div class="ruler-body">
       <p class="hint">左键添加测量点，再次点击第一个点闭合以测量面积，测量点可以拖动</p>
