--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div id="calendar-popup" class="hidden">
     <div class="calendar-header">
       <strong>Calendar</strong>
-      <button id="close-calendar" aria-label="Close" class="close-btn">×</button>
+      <button id="close-calendar" aria-label="Close" class="close-btn">✕</button>
     </div>
     <input type="date" id="date-picker" />
     <button id="today-button">Today</button>
@@ -80,7 +80,7 @@
   <div id="update-panel" class="hidden">
     <div class="update-header">
       <strong>更新概要（点击跳转）</strong>
-      <button id="close-update-panel" class="close-btn">×</button>
+      <button id="close-update-panel" class="close-btn">✕</button>
     </div>
     <div id="update-list" class="update-list">
 
@@ -91,7 +91,7 @@
   <div id="info-panel" class="hidden">
     <div class="update-header">
       <span>领土信息</span>
-      <button id="close-info-panel" class="close-btn">×</button>
+      <button id="close-info-panel" class="close-btn">✕</button>
     </div>
     <div id="info-content" class="update-list"></div>
   </div>
@@ -100,7 +100,7 @@
   <div id="geo-panel" class="hidden">
     <div class="update-header">
       <span>经纬度定位</span>
-      <button id="close-geo-panel" class="close-btn">×</button>
+      <button id="close-geo-panel" class="close-btn">✕</button>
     </div>
   
     <div class="geo-form">
