--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
       <div class="sidebar-section middle">
         <div class="icon-group">
-          <div class="icon">🛠️</div>
+          <div class="icon tools">🛠️</div>
           <div class="icon">📏</div>
           <div class="icon">✏️</div>
         </div>
