--- a/index.html
+++ b/index.html
@@ -138,22 +138,23 @@
     <div class="update-header">
       <strong>Draw</strong>
       <div class="draw-actions">
-        <button id="draw-undo" title="Undo">↩</button>
-        <button id="draw-clear" title="Clear">🗑</button>
-        <button id="draw-export" title="Export GeoJSON">⬇</button>
-        <button id="draw-share" title="Share GeoJSON">🔗</button>
-        <button id="close-draw-panel" class="close-btn">✕</button>
+        <button id="draw-undo" title="撤销">↩</button>
+        <button id="draw-clear" title="清除所有">🗑</button>
+        <button id="draw-export" title="导出.png">⬇</button>
+        <button id="draw-share" title="分享.GeoJSON">🔗</button>
+        <button id="close-draw-panel" class="关闭">✕</button>
       </div>
     </div>
   
     <div class="draw-toolbar">
       <div class="tool-row">
-        <button class="draw-tool" data-tool="pen"   title="Pen">✏️</button>
-        <button class="draw-tool" data-tool="erase" title="Eraser">🧽</button>
-        <button class="draw-tool" data-tool="line"  title="Line">／</button>
-        <button class="draw-tool" data-tool="arrow" title="Arrow">➚</button>
-        <button class="draw-tool" data-tool="rect"  title="Rectangle">▭</button>
-        <button class="draw-tool" data-tool="circle" title="Circle">◯</button>
+        <button class="draw-tool" data-tool="pen"   title="画笔">✏️</button>
+        <button class="draw-tool" data-tool="note" title="批注">📝</button>
+        <button class="draw-tool" data-tool="erase" title="橡皮（左键点击删除）">🧽</button>
+        <button class="draw-tool" data-tool="line"  title="直线">／</button>
+        <button class="draw-tool" data-tool="arrow" title="箭头">➚</button>
+        <button class="draw-tool" data-tool="rect"  title="矩形">▭</button>
+        <button class="draw-tool" data-tool="circle" title="圆形">◯</button>
       </div>
   
       <div class="tool-row">
