--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh">
+<script
+  src="https://csfs64.github.io/assets/hub-banner.js"
+  data-base="https://csfs64.github.io/"
+  data-latest="https://csfs64.github.io/data/latest.json"
+  data-updates="https://csfs64.github.io/#updates"
+  defer
+></script>
+
 <head>
   <meta charset="UTF-8" />
   <title>前线地图</title>
