--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <script
-    src="https://csfs64.github.io/assets/hub-banner.js"
-    data-base="https://csfs64.github.io/"
-    data-latest="https://csfs64.github.io/data/latest.json"
-    data-updates="https://csfs64.github.io/#updates"
+    src="https://csfs64.github.io/back_to_neon/assets/hub-banner.js"
+    data-base="https://csfs64.github.io/back_to_neon/"
+    data-latest="https://csfs64.github.io/back_to_neon/data/latest.json"
+    data-updates="https://csfs64.github.io/back_to_neon/#updates"
     defer
   ></script>
 
