--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script
     src="https://csfs64.github.io/back_to_neon/assets/hub-banner.js"
     data-base="https://csfs64.github.io/back_to_neon/"
-    data-latest="https://csfs64.github.io/back_to_neon/data/latest.json"
-    data-updates="https://csfs64.github.io/back_to_neon/#updates"
+    data-updates-link="https://csfs64.github.io/back_to_neon/#updates"
     defer
   ></script>
 
