--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     src="https://csfs64.github.io/back_to_neon/assets/hub-banner.js"
     data-base="https://csfs64.github.io/back_to_neon/"
     data-updates-link="https://csfs64.github.io/back_to_neon/#updates"
+    data-left="64"            <!-- 地图页可用 64；FreeLand 可改 12 -->
+    data-automin="2200"       <!-- 2.2s 后自动收起；设 0 关闭 -->
     defer
   ></script>
 
