--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     src="https://csfs64.github.io/back_to_neon/assets/hub-banner.js"
     data-base="https://csfs64.github.io/back_to_neon/"
     data-updates-link="https://csfs64.github.io/back_to_neon/#updates"
-    data-left="64"            <!-- 地图页可用 64；FreeLand 可改 12 -->
-    data-automin="2200"       <!-- 2.2s 后自动收起；设 0 关闭 -->
+    data-autohide="2200"     <!-- 自动收起毫秒；0=不自动收起 -->
+    data-edge="6"            <!-- 收起后保留的边缘高度（px） -->
     defer
   ></script>
 
