--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     data-base="https://csfs64.github.io/back_to_neon/"
     data-updates-link="https://csfs64.github.io/back_to_neon/#updates"
     data-autohide="5000"     <!-- 自动收起毫秒；0=不自动收起 -->
-    data-edge="8"            <!-- 收起后保留的边缘高度（px） -->
+    data-edge="8"            <!-- 保留边缘高度（px） -->
     defer
   ></script>
 
@@ -180,16 +180,13 @@
     </div>
   </div>
 
-  <!-- 地图容器 -->
   <div id="map"></div>
 
-  <!-- Leaflet 脚本 -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mgrs@1.0.0/dist/mgrs.min.js"></script>
   <script src="https://unpkg.com/leaflet-image/leaflet-image.js"></script>
 
-  <!-- 自定义逻辑 -->
   <script src="main.js"></script>
 </body>
 </html>
