--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
       <div class="sidebar-section bottom">
         <div class="icon-group">
-          <div class="icon">☁️</div>
+          <div class="icon" id="btn-trench">☁️</div>
           <div class="icon">🎯</div>
           <div class="icon">📡</div>
           <div class="icon">🔥</div>
