--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   
   <!-- 自定义样式 -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- fflate 解压库 -->
+  <script src="https://unpkg.com/fflate/umd/index.js"></script>
 </head>
   
 <body>
