--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     html[data-embed="1"] #app,
     html[data-embed="1"] .map-wrap,
     html[data-embed="1"] #map { height: 100%; }
-
+  
     html[data-embed="1"] .topbar,
     html[data-embed="1"] .footer,
-    html[data-embed="1"] .help-strip {
+    html[data-embed="1"] .help-strip,
+    html[data-embed="1"] .hub-banner {
       display: none !important;
     }
   </style>
