--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <link rel="stylesheet" href="style.css" />
 
   <script>
+    window.TrenchConfig = { autoShow: true };
+  </script>
+
+  <script>
     (function () {
       try {
         const usp = new URLSearchParams(location.search);
