--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
   </style>
 
   <link rel="stylesheet" href="style.css" />
-
-  <script>
-    window.TrenchConfig = { autoShow: true };
-  </script>
-
+  
   <script>
     (function () {
       try {
@@ -94,7 +90,7 @@
     
       <div class="sidebar-section bottom">
         <div class="icon-group">
-          <div class="icon" id="btn-trench">☁️</div>
+          <div class="icon" id="btn-trench">⛏</div>
           <div class="icon">🎯</div>
           <div class="icon">📡</div>
           <div class="icon">🔥</div>
