--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
   <script src="https://cdn.jsdelivr.net/npm/mgrs@1.0.0/dist/mgrs.min.js"></script>
   <script src="https://unpkg.com/leaflet-image/leaflet-image.js"></script>
 
+  <script src="map_notes.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
